update GET /albums route to contain linke for each album listed - links to /album/:id page

--- a/views/albums.erb
+++ b/views/albums.erb
@@ -5,9 +5,10 @@
 
     <% @albums.each do |album|%>
         <div>
-          Title: <%=album.title%>
+          Title: <a href="/albums/<%=album.id%>"><%=album.title%></a>
+
           Released: <%=album.release_year%>
-        </div>
+        </div><br>
     <% end %>
 
   </body>
