--- a/views/new_album.erb
+++ b/views/new_album.erb
@@ -1,12 +1,12 @@
 <form method="POST" action="/albums">
   <label>Album Title:</label>
-  <input type="text" name="album_title"><br>
+  <input type="text" name="title"><br>
 
   <label>Release Year:</label>
-  <input type="text" name="album_release_year"><br>
+  <input type="text" name="release_year"><br>
 
   <label>Artist ID:</label>
-  <input type="text" name="album_artist_id"><br>
+  <input type="text" name="artist_id"><br>
 
   <input type="submit"><br>
 </form>
